--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 var userScore = 0;
         
                 function setTargetScore() {
-                    targetScore = Math.floor(Math.random() * 100);
+                    targetScore = Math.floor(Math.random() * 120) + 19;
                     $(".targetScore").text("Target score: " + targetScore);
                 }
         
